# chatbot

./: .dockerignore  .env.example  .gitignore  DOCS_STATUS.md  Dockerfile  Makefile  README.md  docker-compose.yml  plano-chatbot.md  pyproject.toml  requirements.txt
docs/: HERMES_CONTEXT_AND_SKILLS_FUTURE_PLAN.md  IMPLEMENTATION_STATUS.md  MULTIUSER_PERSONALIZED_CHATBOT_PLAN.md  PROJECT_SUMMARY.md  REAL_CODE_FILES_SKILLS_JOBS_TTS_LIVE_PLAN.md  USERSPACE_RAG_SKILLS_FULL_PLAN.md  VOICE_WAKE_MODE_FUTURE_PLAN.md  chat-operacional-implementation-plan.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
load_tests/: README.md  locustfile.py
scripts/: backup.sh  download_build_wheel.py  resolve_build_host.py  restore.sh
src/: config.py  main.py
tests/: test_admin_agent_tools.py  test_agent_runtime.py  test_agent_tool_result.py  test_antigravity.py  test_api.py  test_auth_multiuser.py  test_auth_required.py  test_chat_attachments.py  test_chat_jobs.py  test_cloudflare_provider.py  test_codex_sse_modes.py  test_conversation_history_skill.py  test_coolify_security.py  test_core.py  test_frontend_admin_users.py  test_frontend_documents_panel.py  test_frontend_live_voice.py  test_frontend_preference_suggestions.py  test_frontend_state_synchronization.py  test_frontend_streaming_ui.py  test_frontend_user_providers.py  test_frontend_workspace_manager.py  test_frontend_workspace_patch_api.py  test_frontend_workspace_patch_ui.py  test_grok_oauth.py  test_ingestion.py  test_inworld_tts.py  test_message_trace_persistence.py  (+25 more)
(+102 files in other folders)
